<resources>
    <string name="create_account">Create An Account</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="employer_registration"><u>Employer Registration</u></string>
    <string name="emplyer_account_text">If you are an employer, please click on the link below to create an employer account.</string>
    <string name="venue">VENUE</string>
    <string name="customer">CUSTOMER</string>
    <string name="register">Register</string>
    <string name="create_an_account_as_a_venue_owner">Create an account as a venue owner</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="accept_term_amp_conditions"><![CDATA[Accept Term & Conditions]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="register_venue">Register your venue</string>
    <string name="basic_information">1. Basic Information</string>
    <string name="venue_name">Venue Name</string>
    <string name="venue_address">Venue Address</string>
    <string name="venue_description">Venue Description</string>
    <string name="workspace_description">Workspace Description</string>
    <string name="set_venue_working_hours">Set Venue Working Hours</string>
    <string name="upload_venue_photos">Upload Venue Photos</string>
    <string name="_2_venue_working_hours">2. Venue Working Hours</string>
    <string name="apply_to_all_days">   Apply to all days</string>
    <string name="add_venue_amenities">Add Venue Amenities</string>
    <string name="enter_state">please enter state</string>
    <string name="enter_streat_address">please enter streat address</string>
    <string name="enter_description">please enter venue description</string>
    <string name="enter_valid_email">please enter valid email</string>
    <string name="state">Please enter your State</string>
    <string name="city">Please enter your City</string>
    <string name="enter_address">Please enter your Address</string>
    <string name="please_enter_zip_code">please enter zip code</string>
    <string name="enter_venue_name">please enter venue name!</string>
    <string name="enter_no_of_space">please enter number of workspaces</string>
    <string name="enter_no_one_space">please enter at least 1 number of workspaces</string>
    <string name="create_a_personal_account">Create a personal account</string>
    <string name="interests">Interests</string>
    <string name="terms_and_conditions"><u>Terms and Conditions</u></string>
    <string name="clicking_get_started_confirms_acceptance_of_the_dorpee">Clicking get started confirms acceptance of the Dorpee</string>
    <string name="upcoming_bookings">UPCOMING BOOKINGS</string>
    <string name="past_bookings">PAST BOOKINGS</string>
    <string name="adress_book">ADRESS BOOK</string>
    <string name="teams">TEAMS</string>
    <string name="contacts">CONTACTS</string>
    <string name="add_new_team">Add new team</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="include_free_space_access">Include free space access</string>
    <string name="haven_t_used_all_your_credits_for_the_month_don_t_worry_with_all">*Haven\'t used all your credits for the month? Don\'t worry with all
    of our paid plans, 10% of your total plan credits can be rolled over to next month (as long as you keep an active Dorpee plan going).</string>
    <string name="search_prefrences">SEARCH PREFRENCES</string>
    <string name="oh_s_verified"><![CDATA[OH&S Verified :]]></string>
    <string name="settings">Settings</string>
    <string name="payment_settings">Payment settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="linkedin_profilex">LinkedIn Profile</string>
    <string name="save">save</string>
    <string name="extend_stay">EXTEND STAY</string>
    <string name="rebook">REBOOK</string>
    <string name="my_dashboard">MY DASHBOARD</string>
    <string name="log_out">LOG OUT</string>
    <string name="get_plan">Get Plan</string>
    <string name="intro">INTRO</string>
    <string name="my_active_plan">MY ACTIVE PLAN</string>
    <string name="total_bookings">Total Bookings</string>
    <string name="active_venues">Active Venues</string>
    <string name="active_workspaces">Active Workspaces</string>
    <string name="earned_this_month">Earned This Week</string>
    <string name="venue_switch_to_customer_mode">VENUE - </string>
    <string name="u_switch_to_customer_mode_u"><u>Switch to customer mode</u></string>
    <string name="u_switch_to_venue_mode_u"><u>Switch to venue mode</u></string>
    <string name="today">Today</string>
    <string name="bookings">BOOKINGS</string>
    <string name="_0420_945_739"><u>0420 945 739</u></string>
    <string name="upcoming">UPCOMING</string>
    <string name="past">PAST</string>
    <string name="myvenues">MY VENUES</string>
    <string name="workspaces">workspaces</string>
    <string name="statistics">STATISTICS</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="submit">SUBMIT</string>
    <string name="block_time">BLOCK DAY/TIME</string>
    <string name="manage_availability">Manage Availability</string>
    <string name="you_can_specify_more_workspace_type_amenities_later">You can specify more workspace type amenities later.</string>
    <string name="_2_venue_amenities">2. Venue Amenities</string>
    <string name="other_peoples_can_see_my_first_name_and_interests_when_i_am_at_venue">Other peoples can see my First Name and Interests when i am at venue</string>
    <string name="people_can_see_my_interests">People can see my interests</string>
    <string name="people_can_see_my_linkedin_profile">People can see my LinkedIn Profile</string>
    <string name="workingday">Please select atleast one working day!</string>
    <string name="add_workspaces_to_venue">Add Workspaces to Venue</string>
    <string name="how_many_workspaces_do_you_offer_at_this_venue">How many workspaces do you offer at this venue?</string>
    <string name="you_should_specify_at_least_1_workspace_type">You should specify at least 1 workspace type.</string>
    <string name="for_example_2_conference_rooms_1_open_space_area_3_private_rooms">For example, 2 conference rooms, 1 open space area, 3 private rooms</string>
    <string name="next">NEXT</string>
    <string name="specify_workspaces">Specify Workspaces</string>
    <string name="bonus_offer">Would you like to have a bonus offer for your guests?</string>
    <string name="add_one_more">Add One More</string>
    <string name="workspace_1">workspace 1</string>
    <string name="add_workspace">Add Workspace</string>
    <string name="to_venue_name">To Venue Name</string>
    <string name="workspace_name">Workspace name</string>
    <string name="this_is_a_free_workspace">This is a free workspace</string>
    <string name="price_per_hour">Price Per Hour</string>
    <string name="suggested_price_based_on_similar_workspaces_around_you">suggested price based on similar workspaces around you</string>
    <string name="max_number_of_people_er_workspace">Max number of people workspace</string>
    <string name="how_many_workspaces_of_this_type_do_you_offer">How many workspaces of this type do you offer?</string>
    <string name="set_the_minimum_and_maximum_booking_hours">Set the minimum and maximum booking hours</string>
    <string name="workspace_type">Workspace Type</string>
    <string name="workspace_amenities">Workspace Amenities</string>
    <string name="publish">Publish Workspace</string>
    <string name="success">Success!</string>
    <string name="your_venue_journal_cafe_is_now_published">Your venue journal cafe is now published!</string>
    <string name="add_more_workspaces_to_venue">ADD MORE WORKSPACES TO VENUE</string>
    <string name="go_to_dashboard">GO TO DASHBOARD</string>
    <string name="select_atleast_1">select atleast 1 service first!</string>
    <string name="select_atleast_asset">select atleast 1 asset first!</string>
    <string name="select_atleast_type">select at least 1 workspace type first!</string>
    <string name="select_atleast_environment">select at least 1 environment first!</string>
    <string name="environment">Environment</string>
    <string name="upload_workspace_image">Upload at least 1 workspace image</string>
    <string name="price_per_hour_error">Enter price per hour!</string>
    <string name="minhour_error">Enter min hour!</string>
    <string name="workspace_name_error">Enter workspace Name!</string>
    <string name="max_no_of_peoples">Enter max number of peoples!</string>
    <string name="no_of_workspace_error">Enter number of wrokespaces!</string>
    <string name="workspace_description_error">Enter workspace description!</string>
    <string name="maxhour_error">Enter max hour!</string>
    <string name="add">Add</string>
    <string name="team_name">Team name</string>
    <string-array name="array_name">
        <item>All Venues</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="array_venue">
        <item>Select Venue</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="array_workspace">
        <item>Select Workspace</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="array_name_two">
        <item>This Week</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string-array name="array_time">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="array_time_block">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_search">SEARCH</string>
    <string name="title_booking">BOOKINGS</string>
    <string name="title_checkin">CHECK-IN/OUT</string>
    <string name="dorpee">Dorpee</string>
    <string name="where_would_you_like_to_work_today">Where would you like to work today?</string>
    <string name="location">Location, landmark or address</string>
    <string name="unlimited_flexible_workspace_possibilities_with_a_simple_monthly_membership">Unlimited flexible workspace possibilities with a simple monthly membership.</string>
    <string name="join_for_free">JOIN FOR FREE</string>
    <string name="sign_in">SIGN IN</string>
    <string name="cancel">Cancel</string>
    <string name="i_need_the_workspace">Where Would You Like To Work Today?</string>
    <string name="date">Date</string>
    <string name="define_timeframe">DEFINE TIMEFRAME</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="space_type">SPACE TYPE</string>
    <string name="no_of_people">Number of People</string>
    <string name="search_only_oh_s_verified_venues"><![CDATA[Search Only OH&S Verified Venues]]></string>
    <string name="advanced_search">ADVANCED SEARCH</string>
    <string name="basic_search">BASIC SEARCH</string>
    <string name="total_credits">TOTAL CREDITS</string>
    <string name="amenities_and_services">AMENITIES AND SERVICES</string>
    <string name="save_my_search_preferences">Save my search preferences</string>
    <string name="select_location">select location</string>
    <string name="per_hour">/per hour</string>
    <string name="click_to_upload_a_profile_picture">Click to upload a profile picture</string>
</resources>