<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_4sdp"
    tools:context=".ui.personaldashboard.fragments.PrivacyFragment">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/alertView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="@dimen/_8sdp"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonTeam"
        android:layout_width="0dp"
        android:layout_height="@dimen/_34sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/square_btn_blue"
        android:paddingStart="@dimen/_12sdp"
        android:paddingEnd="@dimen/_12sdp"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textLayoutLastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textLayoutLastName"
        app:layout_constraintTop_toBottomOf="@+id/textLayoutLastName"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/nametSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:track="@drawable/switch_track"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/other_peoples_can_see_my_first_name_and_interests_when_i_am_at_venue"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/nametSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nametSwitch"
        app:layout_constraintTop_toTopOf="@+id/nametSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/interstsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:track="@drawable/switch_track"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintStart_toStartOf="@+id/nametSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/people_can_see_my_interests"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/interstsSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/interstsSwitch"
        app:layout_constraintTop_toTopOf="@+id/interstsSwitch" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/linkedInSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:track="@drawable/switch_track"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintStart_toStartOf="@+id/interstsSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/people_can_see_my_linkedin_profile"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@+id/linkedInSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linkedInSwitch"
        app:layout_constraintTop_toTopOf="@+id/linkedInSwitch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView50"
        app:layout_constraintStart_toStartOf="@+id/linkedInSwitch"
        app:layout_constraintTop_toBottomOf="@+id/textView50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profileLinked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/linkedin_profilex"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loginLoader"
        style="?android:progressBarStyleLarge"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/circle_view"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="@dimen/_4sdp"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorWhite"
        android:indeterminateTintMode="src_atop"
        android:padding="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/buttonTeam"
        app:layout_constraintEnd_toEndOf="@+id/buttonTeam"
        app:layout_constraintStart_toStartOf="@+id/buttonTeam"
        app:layout_constraintTop_toTopOf="@+id/buttonTeam" />


</androidx.constraintlayout.widget.ConstraintLayout>

